--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,10 @@
 @import 'variables';
 @import 'base';
 @import 'header';
+@import 'hero';
+@import 'advantages';
+@import 'activity';
+@import 'team';
+@import 'clients';
+@import 'footer';
+@import 'modal';
