--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -53,15 +53,17 @@
     padding-top: 32px;
     padding-bottom: 32px;
 
-    &__link:hover {
+    &:hover {
         color: $accent-color;
     }
-
-    &__link:focus {
-            color: $accent-color;
-        
+    
+   &:focus {
+        color: $accent-color;
     }
 }
+
+
+
 
 .navigation__link.current {
     position: relative;
@@ -104,15 +106,16 @@
     display: flex;
     align-items: center;
     transition: color $typical-timing-duration $typical-timing-function;
+
+    &:hover {
+            color: $accent-color;
+        }
+    
+    &:focus {
+            color: $accent-color;
+        }
 }
 
-.contacts__link:hover {
-            color: $accent-color;
-        }
-
-.contacts__link:focus {
-            color: $accent-color;
-        }
 
 .contacts__icon {
     fill: currentColor;
