--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -109,16 +109,16 @@
     background-color: transparent;
     color: rgba(255, 255, 255, 0.6);
     padding-left: 16px;
-}
-
-.footer-form-input::placeholder {
-    font-family: "Roboto";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.25;
-    letter-spacing: 0.03em;
-    color: rgba(255, 255, 255, 0.6);
+    
+    &::placeholder {
+        font-family: "Roboto";
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.25;
+        letter-spacing: 0.03em;
+        color: rgba(255, 255, 255, 0.6);
+    }
 }
 
 .footer-form-btn {
