--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -2,17 +2,16 @@
     padding-top: 24px;
     padding-bottom: 25px;
     border: 1px solid #ececec;
-}
 
-.header-flex {
-    display: flex;
-    align-items: center;
+    &-flex {
+            display: flex;
+            align-items: center;
+        }
 }
 
 .site-nav {
     display: flex;
     align-items: center;
-
 
 &__logo {
     font-family: "Raleway";
@@ -62,24 +61,21 @@
     }
 }
 
-
-
-
 .navigation__link.current {
     position: relative;
     color: $accent-color;
-}
 
-.navigation__link.current::after {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 4px;
-    background-color: $accent-color;
-    border-radius: 2px;
-    position: absolute;
-    bottom: 0%;
-    left: 0;
+   &::after {
+            content: "";
+            display: block;
+            width: 100%;
+            height: 4px;
+            background-color: $accent-color;
+            border-radius: 2px;
+            position: absolute;
+            bottom: 0%;
+            left: 0;
+        }
 }
 
 .contacts {
@@ -89,9 +85,11 @@
     &__item {
             margin-right: 50px;
         }
+    &__icon {
+            fill: currentColor;
+            margin-right: 11px;
+        }
 }
-
-
 
 .contacts__item:last-child {
     margin-right: 0;
@@ -110,14 +108,7 @@
     &:hover {
             color: $accent-color;
         }
-    
     &:focus {
             color: $accent-color;
         }
-}
-
-
-.contacts__icon {
-    fill: currentColor;
-    margin-right: 11px;
 }
