sass структура допрацювання

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,13 @@
-@import 'variables';
-@import 'base';
-@import 'header';
-@import 'hero';
-@import 'advantages';
-@import 'activity';
-@import 'team';
-@import 'clients';
-@import 'footer';
-@import 'modal';
+@import './utils/variables';
+@import './components/hidden';
+@import './components/container';
+@import './components/button';
+@import './base/base';
+@import './sections/header';
+@import './sections/hero';
+@import './sections/advantages';
+@import './sections/activity';
+@import './sections/team';
+@import './sections/clients';
+@import './sections/footer';
+@import './components/modal';
